--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         <nav>
             <div>
-                <a href="Index.html" class="Menu">INÍCIO</a>
+                <a href="index.html" class="Menu">INÍCIO</a>
             </div>
         </nav>
 
