--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
     </main>
 
     <footer>
-        <p>Site desenvolvido por <span>Cauã Saraiva</span> no curso de Informatica no <span>Way Cursos</span>.</p>
+        <div id="textFooter">
+            <p>Site desenvolvido por <span>Cauã Saraiva</span> no curso de Informatica no <span>Way Cursos</span>.</p>
+        </div>
     </footer>
 </body>
 </html>
