--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
     </header>
 
     <main>
-        <p>Olá! Meu nome é Cauã Saraiva e sou um estudante de informática. Atualmente, estou aprendendo a desenvolver páginas na web utilizando as linguagens HTML e CSS na Way Cursos. Estou muito entusiasmado em aprender mais sobre programação e tecnologia, e espero poder utilizar essas habilidades no futuro para criar projetos incríveis e contribuir para a comunidade de desenvolvimento web. Sinta-se à vontade para navegar em meu portfólio e conferir alguns dos projetos que já desenvolvi até o momento. Obrigado pela visita!</p>
+        <div id="fundoMain">
+            <div>
+                <p id="mainText">Olá! Meu nome é Cauã Saraiva e sou um estudante de informática. Atualmente, estou aprendendo a desenvolver páginas na web utilizando as linguagens HTML e CSS na Way Cursos. Estou muito entusiasmado em aprender mais sobre programação e tecnologia, e espero poder utilizar essas habilidades no futuro para criar projetos incríveis e contribuir para a comunidade de desenvolvimento web. Sinta-se à vontade para navegar em meu portfólio e conferir alguns dos projetos que já desenvolvi até o momento. Obrigado pela visita!</p>
+            </div>
+        </div>
+        
     </main>
 
     <footer>
