--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <footer>
         <div id="textFooter">
-            <p>Site desenvolvido por <span>Cauã Saraiva</span> no curso de Informatica no <span>Way Cursos</span>.</p>
+            <p>Site desenvolvido por <a href="https://wa.me/5585996740627" target="_blank" rel="noopener noreferrer" id="caua">Cauã Saraiva</a> no curso de Informatica no <span>Way Cursos</span>.</p>
         </div>
     </footer>
 </body>
