Atualização no Javascript

--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-    <!--<script src="script.js"></script>-->
+    <script src="script.js"></script>
     <title>Cauã Saraiva</title>
 </head>
 <body>
+    <div id="camadaM"></div>
+
     <header style="position: relative;">
 
         <nav>
-            <img src="https://icon-library.com/images/menu-icon/menu-icon-3.jpg" alt="" id="imgMenu">
+            <img src="https://icon-library.com/images/menu-icon/menu-icon-3.jpg" alt="" id="imgMenu" onclick="barraMenu()">
         </nav>
 
         <div id="Social">
