--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <title>Cauã Saraiva</title>
 </head>
 <body>
-    <div id="camadaM"></div>
+    <div id="camadaM">
+        <nav>
+            <div>
+                <a href="index.html" class="menuText">INÍCIO</a>
+                <br>
+                <a href="portfolio.html" class="menuText">PORTFOLIO</a>
+            </div>
+        </nav>
+    </div>
 
     <header style="position: relative;">
 
@@ -25,6 +33,11 @@
             <a href="https://instagram.com/wolrker_cs?igshid=ZDdkNTZiNTM=" target="_blank" rel="noopener noreferrer"><img src="images/logo-instagram.png" alt="Instagram" class="logoSocial"></a>
         </div>
 
+        
+
+    </header>
+
+    <main>
         <div id="Fundo">
             <div id="divfotoPerfil">
                 <img src="fotodeperfil.jpg" alt="Cauã Saraiva" id="fotoPerfil">
@@ -37,7 +50,7 @@
 
             <div id="areaPrin">
                 <div id="areasLinguagens">
-                    <h2>Minha Area de linguagens</h2>
+                    <h2>Minhas Areas de linguagens</h2>
     
                     <div id="regiaoLinguagens">
                         <img src="imgLanguagens/LOGOHTML.png" alt="HTML" class="areaLogo">
@@ -50,15 +63,7 @@
             </div>
         </div>
 
-        <nav>
-            <div>
-                <a href="index.html" class="Menu">INÍCIO</a>
-            </div>
-        </nav>
 
-    </header>
-
-    <main>
         <div id="fundoMain">
             <div>
                 <p id="mainText">Olá! Meu nome é Cauã Saraiva e sou um estudante de informática. Atualmente, estou aprendendo a desenvolver páginas na web utilizando as linguagens HTML e CSS na Way Cursos e aprendendo JavaScript e Csharp, desenvolvendo meu primeiro jogo no Unity. Estou muito entusiasmado em aprender mais sobre programação e tecnologia, e espero poder utilizar essas habilidades no futuro para criar projetos incríveis e contribuir para a comunidade de desenvolvimento web e games. Sinta-se à vontade para navegar em meu portfólio e conferir alguns dos projetos que já desenvolvi até o momento. Obrigado pela visita!</p>
