--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>Cauã Saraiva</title>
 </head>
 <body>
+    <div id="sombra"></div>
+
     <div id="camadaM">
         <nav>
             <div>
