--- a/portfolio.html
+++ b/portfolio.html
@@ -12,11 +12,14 @@
     <title>Cauã Saraiva</title>
 </head>
 <body>
+    <div id="sombra"></div>
+
     <div id="camadaM">
         <nav>
             <div>
                 <a href="index.html" class="menuText">INÍCIO</a>
-                <a href="Portfolio" class="menuText">Portfolio</a>
+                <br>
+                <a href="portfolio.html" class="menuText">PORTFOLIO</a>
             </div>
         </nav>
     </div>
