--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Cauã Saraiva</title>
 </head>
 <body>
-    <div id="sombra"></div>
+    <div id="sombra" onclick="barraMenu()"></div>
 
     <div id="camadaM">
         <nav>
